feat(i18n): Add translation

--- a/services/front-end/src/app/features/forex/i18n/forex.en.json
+++ b/services/front-end/src/app/features/forex/i18n/forex.en.json
@@ -1,1 +1,19 @@
-{}
+{
+    "landing-page": {
+        "subscription-list": {
+            "currencies": "Currencies",
+            "subscribe": "Subscribe",
+            "following": "Following",
+            "low": "Low",
+            "high": "High",
+            "yesterday": "Yesterday",
+            "stop-following": "Stop following"
+        },
+        "currency-picker-modal": {
+            "currencies": "Currencies",
+            "subscribe-new": "Subscribe to new currencies",
+            "cancel": "Cancel",
+            "confirm": "Confirm"
+        }
+    }
+}
