feat(form): Add form validation

--- a/services/front-end/src/app/features/forex/i18n/forex.en.json
+++ b/services/front-end/src/app/features/forex/i18n/forex.en.json
@@ -13,7 +13,8 @@
             "currencies": "Currencies",
             "subscribe-new": "Subscribe to new currencies",
             "cancel": "Cancel",
-            "confirm": "Confirm"
+            "confirm": "Confirm",
+            "required": "This field is required"
         }
     }
 }
