--- a/services/front-end/src/app/features/forex/i18n/forex.es.json
+++ b/services/front-end/src/app/features/forex/i18n/forex.es.json
@@ -13,7 +13,8 @@
             "currencies": "Divisas",
             "subscribe-new": "Seguir nueva moneda",
             "cancel": "Cancelar",
-            "confirm": "Confirmar"
+            "confirm": "Confirmar",
+            "required": "Este campo es obligatorio"
         }
     }
 }
